Fix spacing btw buttons, table and title

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -115,9 +115,6 @@ $white: #fff;
 }
 // Days Calendar Styles
 .service_days {
-    .btn-group{
-        margin-bottom: 20px;
-    }
     .whiteLink {
         color: $white;
         text-decoration: none;
